account for empty library

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,13 @@
 <body>
 <h1>My Library</h1>
     <ul>
-        <li></li>
+        {% if books.empty %}
+            {% for book in books %}
+            <li>{{ book["name"] }} - {{ book["author"] }} - {{ book["rating"] }}/10</li>
+            {% endfor %}
+        {% else %}
+            <p>Library is empty.</p>
+        {% endif %}
     </ul>
     
 <a href="">Add New Book</a>
