--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>My Library</h1>
     <ul>
-        {% if books.empty %}
+        {% if books != [] %}
             {% for book in books %}
             <li>{{ book["name"] }} - {{ book["author"] }} - {{ book["rating"] }}/10</li>
             {% endfor %}
@@ -16,6 +16,6 @@
         {% endif %}
     </ul>
     
-<a href="">Add New Book</a>
+<a href="{{ url_for('add') }}">Add New Book</a>
 </body>
 </html>
