--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,10 @@
     <ul>
         {% if books != [] %}
             {% for book in books %}
-            <li>{{ book.title }} - {{ book.author }} - {{ book.rating }}/10</li>
+            <li>
+                {{ book.title }} - {{ book.author }} - {{ book.rating }}/10
+                <a href="{{ url_for('edit', index=book.id) }}">Edit Rating</a>
+            </li>
             {% endfor %}
         {% else %}
             <p>Library is empty.</p>
