--- a/templates/edit.html
+++ b/templates/edit.html
@@ -5,8 +5,12 @@
     <title>Edit Rating</title>
 </head>
 <body>
-    <p>Book name: {{ book.title }}</p>
-    <p>Author: {{ book.author }}</p>
-    <input type="text" name="rating" placeholder="New Rating"><button>Change Rating</button>
+    <form action="{{ url_for('edit') }}" method="POST">
+        <p>Book name: {{ book.title }}</p>
+        <p>Author: {{ book.author }}</p>
+        <input hidden="hidden" name="id" value="{{ book.id }}">
+        <input type="text" name="rating" placeholder="New Rating">
+        <button type="submit">Change Rating</button>
+    </form>
 </body>
 </html>
