--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
             {% for book in books %}
             <li>
                 {{ book.title }} - {{ book.author }} - {{ book.rating }}/10
-                <a href="{{ url_for('edit', index=book.id) }}">Edit Rating</a>
+                <a href="{{ url_for('edit', id=book.id) }}">Edit Rating</a>
             </li>
             {% endfor %}
         {% else %}
